--- a/index.html
+++ b/index.html
@@ -77,6 +77,28 @@
                 <h1>Reported posts</h1>
             </div>
         </main>
+        <section class=" d-flex justify-content-center gap-3 m-3">
+            <div class="border p-3">
+                <h3>How does javascript work?</h3>
+                <ul>
+                    <li>Javascript is an interpreted programming language.</li>
+                    <li>Which makes website dynamic by load data dynamically.</li>
+                    <li>At a time it can do only one task.</li>
+                    <li>It has no compilation step</li>
+                    <li>To run javascript every browser need a javascript engine.</li>
+                </ul>
+            </div>
+            <div class="border p-3">
+                <h3>Localstorage & Session storage</h3>
+                <ul>
+                    <li>Localstorage is a parmenent storage.</li>
+                    <li>Local storage save data until then user remove it.</li>
+                    <li>Session storage is not a parmenent storage.</li>
+                    <li>Session storage save data until then user reloade webpage.</li>
+                    <li>Both works the same way expect for the reasons mentioned above.</li>
+                </ul>
+            </div>
+        </section>
         <footer></footer>
 
         <!-- add javascript  file  -->
