--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                 <h1>Reported posts</h1>
             </div>
         </main>
-        <section class=" d-flex justify-content-center gap-3 m-3">
-            <div class="border p-3">
+        <section class=" d-flex flex-wrap justify-content-center gap-3 m-3">
+            <div class="border p-3 shadow-lg">
                 <h3>How does javascript work?</h3>
                 <ul>
                     <li>Javascript is an interpreted programming language.</li>
@@ -88,8 +88,8 @@
                     <li>To run javascript every browser need a javascript engine.</li>
                 </ul>
             </div>
-            <div class="border p-3">
-                <h3>Localstorage & Session storage</h3>
+            <div class="border p-3 shadow-lg">
+                <h3>Localstorage & Session storage.</h3>
                 <ul>
                     <li>Localstorage is a parmenent storage.</li>
                     <li>Local storage save data until then user remove it.</li>
